[package]
name = "traveltracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
status_bar = { path = "src/status_bar" }
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
webbrowser = "0.8.12"
parking_lot = "0.12.1"
serde_json = "1.0.113"

